--- a/index.html
+++ b/index.html
@@ -1,144 +1,240 @@
 <!DOCTYPE html>
 <html lang="id">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio - Yosep M Simatupang</title>
-    <link rel="stylesheet" href="css/styles.css" />
-    <!-- Pastikan jalur file styles.css benar -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
-  </head>
-  <body>
-    <!-- Header/Navigation -->
-    <header class="header">
-      <nav class="navbar">
-        <div class="nav-container">
-          <div class="nav-logo">
-            <h2>Yosep M Simatupang</h2>
-          </div>
-          <ul class="nav-menu">
-            <li class="nav-item">
-              <a href="#home" class="nav-link">Beranda</a>
-            </li>
-            <li class="nav-item">
-              <a href="#about" class="nav-link">Tentang</a>
-            </li>
-            <li class="nav-item">
-              <a href="#experience" class="nav-link">Pengalaman</a>
-            </li>
-            <li class="nav-item">
-              <a href="#skills" class="nav-link">Keahlian</a>
-            </li>
-            <li class="nav-item">
-              <a href="#portfolio" class="nav-link">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a href="#contact" class="nav-link">Kontak</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio - Yosep M Simatupang</title>
+  <link rel="stylesheet" href="css/styles.css" />
+  <!-- Pastikan jalur file styles.css benar -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+  />
+</head>
+<body>
 
-    <!-- Hero Section -->
-    <section id="home" class="hero">
-      <div class="hero-container">
-        <div class="hero-content">
-          <div class="hero-text">
-            <h1 class="hero-title">
-              <span class="greeting">Halo, Saya</span>
-              <span class="name">Yosep Mangadu Simatupang</span>
-              <span class="profession">Full Stack Developer</span>
-            </h1>
-            <p class="hero-description">
-              Seorang developer yang passionate dalam menciptakan solusi digital
-              inovatif dengan pengalaman 3+ tahun dalam web development dan
-              mobile app development.
+  <!-- Header/Navigation -->
+  <header class="header">
+    <nav class="navbar">
+      <div class="nav-container">
+        <div class="nav-logo">
+          <h2>Yosep M Simatupang</h2>
+        </div>
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="#home" class="nav-link">Beranda</a>
+          </li>
+          <li class="nav-item">
+            <a href="#about" class="nav-link">Tentang</a>
+          </li>
+          <li class="nav-item">
+            <a href="#experience" class="nav-link">Pengalaman</a>
+          </li>
+          <li class="nav-item">
+            <a href="#skills" class="nav-link">Keahlian</a>
+          </li>
+          <li class="nav-item">
+            <a href="#portfolio" class="nav-link">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a href="#contact" class="nav-link">Kontak</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section id="home" class="hero">
+    <div class="hero-container">
+      <div class="hero-content">
+        <div class="hero-text">
+          <h1 class="hero-title">
+            <span class="greeting">Halo, Saya</span>
+            <span class="name">Yosep Mangadu Simatupang</span>
+            <span class="profession">Full Stack Developer</span>
+          </h1>
+          <p class="hero-description">
+            Seorang developer yang passionate dalam menciptakan solusi digital
+            inovatif dengan pengalaman 3+ tahun dalam web development dan
+            mobile app development.
+          </p>
+          <div class="hero-buttons">
+            <a href="#portfolio" class="btn btn-primary">Lihat Portfolio</a>
+            <a href="#contact" class="btn btn-secondary">Hubungi Saya</a>
+          </div>
+        </div>
+        <div class="hero-image">
+          <img
+            src="image/foto-author.jpg"
+            alt="Professional headshot of Yosep M Simatupang wearing a dark suit with a confident smile against a neutral background"
+            class="profile-img"
+          />
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- About Section -->
+  <section id="about" class="about">
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title">Tentang Saya</h2>
+        <p class="section-subtitle">Mari berkenalan lebih dekat</p>
+      </div>
+      <div class="about-content">
+        <div class="about-info">
+          <div class="info-card">
+            <h3>Profil Singkat</h3>
+            <p>
+              Saya adalah seorang Full Stack Developer dengan passion yang
+              tinggi untuk teknologi. Memiliki pengalaman dalam mengembangkan
+              aplikasi web dan mobile menggunakan berbagai teknologi modern.
+              Senang belajar hal baru dan selalu berusaha memberikan solusi
+              terbaik untuk setiap project yang dikerjakan.
             </p>
-            <div class="hero-buttons">
-              <a href="#portfolio" class="btn btn-primary">Lihat Portfolio</a>
-              <a href="#contact" class="btn btn-secondary">Hubungi Saya</a>
-            </div>
           </div>
-          <div class="hero-image">
-            <img
-              src="image/foto-author.jpg"
-              alt="Professional headshot of Yosep M Simatupang wearing a dark suit with a confident smile against a neutral background"
-              class="profile-img"
-            />
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- About Section -->
-    <section id="about" class="about">
-      <div class="container">
-        <div class="section-header">
-          <h2 class="section-title">Tentang Saya</h2>
-          <p class="section-subtitle">Mari berkenalan lebih dekat</p>
-        </div>
-        <div class="about-content">
-          <div class="about-info">
-            <div class="info-card">
-              <h3>Profil Singkat</h3>
-              <p>
-                Saya adalah seorang Full Stack Developer dengan passion yang
-                tinggi untuk teknologi. Memiliki pengalaman dalam mengembangkan
-                aplikasi web dan mobile menggunakan berbagai teknologi modern.
-                Senang belajar hal baru dan selalu berusaha memberikan solusi
-                terbaik untuk setiap project yang dikerjakan.
-              </p>
+          <div class="personal-info">
+            <div class="info-item">
+              <i class="fas fa-envelope"></i>
+              <span>yosepsimatupang678@gmail.com</span>
             </div>
-            <div class="personal-info">
-              <div class="info-item">
-                <i class="fas fa-envelope"></i>
-                <span>yosepsimatupang678@gmail.com</span>
-              </div>
-              <div class="info-item">
-                <i class="fab fa-whatsapp"></i>
-                <span>+62 82180894936</span>
-              </div>
-              <div class="info-item">
-                <i class="fas fa-map-marker-alt"></i>
-                <span>Laguboti, Indonesia</span>
-              </div>
-              <div class="info-item">
-                <i class="fas fa-calendar"></i>
-                <span>25 Tahun</span>
-              </div>
+            <div class="info-item">
+              <i class="fab fa-whatsapp"></i>
+              <span>+62 82180894936</span>
+            </div>
+            <div class="info-item">
+              <i class="fas fa-map-marker-alt"></i>
+              <span>Laguboti, Indonesia</span>
+            </div>
+            <div class="info-item">
+              <i class="fas fa-calendar"></i>
+              <span>25 Tahun</span>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- Other Sections -->
+  <!-- Experience Section -->
+  <section id="experience" class="experience">
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title">Pengalaman</h2>
+        <p class="section-subtitle">Pengalaman profesional saya di bidang teknologi</p>
+      </div>
+      <div class="experience-content">
+        <div class="experience-item">
+          <h3>Full Stack Developer</h3>
+          <p class="experience-date">Januari 2021 - Sekarang</p>
+          <p>
+            Mengembangkan dan memelihara aplikasi web dan mobile, serta bekerja sama dengan tim untuk merancang solusi yang sesuai dengan kebutuhan bisnis.
+          </p>
+        </div>
+        <div class="experience-item">
+          <h3>Web Developer</h3>
+          <p class="experience-date">Juli 2019 - Desember 2020</p>
+          <p>
+            Membuat dan mengoptimalkan website untuk berbagai klien dengan fokus pada user experience dan performance.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-content">
-          <div class="footer-text">
-            <p>&copy; 2024 Yosep M Simatupang. All rights reserved.</p>
+  <!-- Skills Section -->
+  <section id="skills" class="skills">
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title">Keahlian</h2>
+        <p class="section-subtitle">Teknologi yang saya kuasai</p>
+      </div>
+      <div class="skills-content">
+        <div class="skills-item">
+          <i class="fas fa-laptop-code"></i> <!-- Ikon untuk Web Development -->
+          <h3>Web Development</h3>
+          <p>HTML, CSS, JavaScript, React, Vue.js, Node.js, Laravel</p>
+        </div>
+        <div class="skills-item">
+          <i class="fas fa-mobile-alt"></i> <!-- Ikon untuk Mobile Development -->
+          <h3>Mobile Development</h3>
+          <p>Flutter, React Native, Swift, Kotlin</p>
+        </div>
+        <div class="skills-item">
+          <i class="fas fa-database"></i> <!-- Ikon untuk Database -->
+          <h3>Database</h3>
+          <p>MySQL, PostgreSQL, MongoDB</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Portfolio Section -->
+  <section id="portfolio" class="portfolio">
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title">Portfolio</h2>
+        <p class="section-subtitle">Proyek-proyek yang telah saya kerjakan</p>
+      </div>
+      <div class="portfolio-content">
+        <div class="portfolio-item">
+          <h3>Proyek Aplikasi Web</h3>
+          <p>Aplikasi e-commerce yang dibangun dengan Laravel dan React.</p>
+          <a href="#" class="btn btn-primary">Lihat Proyek</a>
+        </div>
+        <div class="portfolio-item">
+          <h3>Proyek Aplikasi Mobile</h3>
+          <p>Mobile app untuk manajemen tugas menggunakan Flutter.</p>
+          <a href="#" class="btn btn-primary">Lihat Proyek</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="contact">
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title">Kontak</h2>
+        <p class="section-subtitle">Ingin bekerja sama atau menghubungi saya?</p>
+      </div>
+      <div class="contact-content">
+        <div class="contact-info">
+          <div class="contact-item">
+            <i class="fas fa-envelope"></i>
+            <a href="mailto:yosepsimatupang678@gmail.com?subject=Halo%20Yosep&body=Pesan%20saya%20adalah:">yosepsimatupang678@gmail.com</a>
           </div>
-          <div class="social-links">
-            <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-            <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-            <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+          <div class="contact-item">
+            <i class="fab fa-whatsapp"></i>
+            <a href="https://wa.me/6282180894936?text=Halo%20Yosep,%20saya%20ingin%20berbicara%20tentang%20proyek%20Anda.">+62 82180894936</a>
           </div>
         </div>
       </div>
-    </footer>
+    </div>
+  </section>
 
-    <script src="script.js"></script>
-  </body>
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-content">
+        <div class="footer-text">
+          <p>&copy; 2024 Yosep M Simatupang. All rights reserved.</p>
+        </div>
+        <div class="social-links">
+          <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+          <a href="#" class="social-link"><i class="fab fa-github"></i></a>
+          <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
 </html>
