--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </header>
 
   <!-- Hero Section -->
-  <section id="home" class="hero">
+  <section id="home" class="hero box-section">
     <div class="hero-container">
       <div class="hero-content">
         <div class="hero-text">
@@ -80,7 +80,7 @@
   </section>
 
   <!-- About Section -->
-  <section id="about" class="about">
+  <section id="about" class="about box-section">
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">Tentang Saya</h2>
@@ -122,7 +122,7 @@
   </section>
 
   <!-- Experience Section -->
-  <section id="experience" class="experience">
+  <section id="experience" class="experience box-section">
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">Pengalaman</h2>
@@ -148,7 +148,7 @@
   </section>
 
   <!-- Skills Section -->
-  <section id="skills" class="skills">
+  <section id="skills" class="skills box-section">
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">Keahlian</h2>
@@ -175,7 +175,7 @@
   </section>
 
   <!-- Portfolio Section -->
-  <section id="portfolio" class="portfolio">
+  <section id="portfolio" class="portfolio box-section">
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">Portfolio</h2>
@@ -197,7 +197,7 @@
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="contact">
+  <section id="contact" class="contact box-section">
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">Kontak</h2>
